Add caching support
An LRU cache is now used to back a cache for
calls to the same url.

--- a/example/index.html
+++ b/example/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="screenReaderAlert" role="alert" aria-live="polite"></div>
     <div id="root" role="main"></div>
+    <div id="secondRoot" role="main"></div>
   </body>
 </html>
