Add updateStateHook to provider level
Also changed `addState` to `updateStateHook` at the hook
level to match the api and to make the purpose more clear.

Also updated the readme to reflect recent changes.

--- a/example/index.html
+++ b/example/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
     <title>UseDataFetch</title>
   </head>
   <body>
     <div id="screenReaderAlert" role="alert" aria-live="polite"></div>
     <div id="root" role="main"></div>
     <div id="secondRoot" role="main"></div>
+    <div id="thirdRoot" role="main"></div>
   </body>
 </html>
