Add request lifecycle listener
Provides a means to listen to the state changes
of the request. Useful for updating uis.

Also added CHANGELOG>md to prep for v2 release.

--- a/example/index.html
+++ b/example/index.html
@@ -13,5 +13,6 @@
     <div id="root" role="main"></div>
     <div id="secondRoot" role="main"></div>
     <div id="thirdRoot" role="main"></div>
+    <div id="fourthRoot" role="main"></div>
   </body>
 </html>
